--- a/QuanLyNhanKhau/Views/Data/Create_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Create_HoKhau.cshtml
@@ -11,17 +11,17 @@
         <form asp-action="Create_HoKhau">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SoHoKhau" class="control-label"></label>
-                <input asp-for="SoHoKhau" class="form-control" />
+                <label asp-for="SoHoKhau" class="control-label required"></label>
+                <input asp-for="SoHoKhau" class="form-control" required />
                 <span asp-validation-for="SoHoKhau" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SoNha" class="control-label"></label>
-                <input asp-for="SoNha" class="form-control" />
+                <label asp-for="SoNha" class="control-label required"></label>
+                <input asp-for="SoNha" class="form-control"  required/>
                 <span asp-validation-for="SoNha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Duong" class="control-label"></label>
+                <label asp-for="Duong" class="control-label required"></label>
                 <select asp-for="Duong" class="form-control">
                     <option value="none">Chọn đường</option>
                     @foreach (var option in QuanLyNhanKhau.Models.Key.ListDuong)
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Duong" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Phuong" class="control-label"></label>
+                <label asp-for="Phuong" class="control-label required"></label>
                 <select asp-for="Phuong" class="form-control">
                     <option value="none">Chọn phường</option>
                     @foreach (var option in QuanLyNhanKhau.Models.Key.ListPhuong)
@@ -43,7 +43,7 @@
                 <span asp-validation-for="Phuong" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quan" class="control-label"></label>
+                <label asp-for="Quan" class="control-label required"></label>
                 <select asp-for="Quan" class="form-control">
                     <option value="none">Chọn quận</option>
                     @foreach (var option in QuanLyNhanKhau.Models.Key.ListQuan)
