--- a/QuanLyNhanKhau/Views/NhaVanHoa/Create_NhaVanHoa.cshtml
+++ b/QuanLyNhanKhau/Views/NhaVanHoa/Create_NhaVanHoa.cshtml
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <label asp-for="tenCoSoVatChat" class="control-label"></label>
                         <input asp-for="tenCoSoVatChat" class="form-control" />
-                        <span asp-validation-for="tenCoSoVatChat" class="text-danger"></span>
+                        <span asp-validation-for="tenCoSoVatChat" class="text-danger" required></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="soLuong" class="control-label"></label>
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <label asp-for="hienTrang" class="control-label"></label>
                         <input asp-for="hienTrang" class="form-control" />
-                        <span asp-validation-for="hienTrang" class="text-danger"></span>
+                        <span asp-validation-for="hienTrang" class="text-danger" required></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="ghiChu" class="control-label"></label>
