--- a/QuanLyNhanKhau/Views/NhaVanHoa/DangKi_NhaVanHoa.cshtml
+++ b/QuanLyNhanKhau/Views/NhaVanHoa/DangKi_NhaVanHoa.cshtml
@@ -10,7 +10,13 @@
     var lstRequest = _context.requests.ToList();
 }
 
-<p>Chi tiết về ca sử dụng xem <a href='https://docs.google.com/spreadsheets/d/1R57VEkYdSBnof7k2yU0KBF6MMluqXcFL/edit?usp=sharing&ouid=105537375543493727257&rtpof=true&sd=true'>tại đây.</a></p>
+<div class="panel panel-info">
+    <div class="panel-body">
+        <p>Chi tiết về ca sử dụng xem <a href='https://docs.google.com/spreadsheets/d/1R57VEkYdSBnof7k2yU0KBF6MMluqXcFL/edit?usp=sharing&ouid=105537375543493727257&rtpof=true&sd=true'>tại đây.</a></p>
+        <p>Phí sử dụng 1 ca là: 20.000 VNĐ. Tới gặp tổ trưởng sau khi đăng kí để hoàn thành chi phí và phê duyệt sử dụng</p>
+    </div>
+</div>
+
 <table class="table">
     <thead>
         <tr>
