--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -147,7 +147,7 @@
         </div>
         <!-- /. WRAPPER  -->
         <div id="footer-sec">
-            "Hoa cải Hải Phòng, chưa ăn chưa biết." -Nguyễn Hữu Việt-
+            "Điều không tưởng được tạo ra bởi người có thể tưởng tượng những điều không thể." -Alan Turing-
         </div>
         <!-- /. FOOTER  -->
         <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
