--- a/QuanLyNhanKhau/Views/Data/Index_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Index_NhanKhau.cshtml
@@ -47,9 +47,13 @@
     <tbody>
     @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CMND)
-            </td>
+            @if (item.CMND == "0") {
+                <td>Chưa cấp</td>
+            } else {
+                <td>
+                    @Html.DisplayFor(modelItem => item.CMND)
+                </td>
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.HoTen)
             </td>
