--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                     }
 
                     <li>
-                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-dashboard "></i>Nam gay</a>
+                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-dashboard "></i>About us</a>
                     </li>
                 </ul>
 
